--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Siyuan Algebraic Topology Seminar</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #fafbfc; margin: 0; padding: 0; }
+    header { background: #28457a; color: #fff; padding: 2em 1em; text-align: center; }
+    main { max-width: 700px; margin: 2em auto; background: #fff; padding: 2em 1.5em; border-radius: 8px; box-shadow: 0 4px 24px rgba(40,69,122,0.07);}
+    h1 { margin-top: 0; }
+    section { margin-bottom: 2em; }
+    .schedule-table { width: 100%; border-collapse: collapse; }
+    .schedule-table th, .schedule-table td { border: 1px solid #ddd; padding: 0.5em; }
+    .schedule-table th { background: #f2f7ff; }
+    footer { text-align: center; color: #888; font-size: 0.9em; margin: 2em 0 1em; }
+    a { color: #28457a; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Algebraic Topology Seminar</h1>
+    <p>Exploring topics in Algebraic Topology</p >
+  </header>
+  <main>
+    <section>
+      <h2>About the Seminar</h2>
+      <p>
+        All time is Beijing Time. The Zoom Id is 6817169181.
+      </p >
+    </section>
 
+    <section>
+      <h2>Schedule</h2>
+      <table class="schedule-table">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Speaker</th>
+            <th>Title</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Oct 20, 4 pm</td>
+            <td>Clover May</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Nov 3, 4 pm</td>
+            <td>Christian Carrick</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Nov 17, 4 pm</td>
+            <td>Jack Davies</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Dec 1, 4 pm</td>
+            <td>Kaif Hilman</td>
+            <td>-</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section>
+      <h2>Organizers</h2>
+      <ul>
+        <li>Guchuan Li (<a href=" ">Email</a >)</li>
+        <li>Foling Zou (<a href="zoufoling@outlook.com">Email</a >)</li><!-- Add more organizers here -->
+      </ul>
+    </section>
+
+    <section>
+      <h2>Contact</h2>
+      <p>
+        For questions, suggestions, or to volunteer to give a talk, please contact the organizers.
+      </p >
+    </section>
+  </main>
+  <footer>
+    &copy; 2025 Algebraic Topology Seminar
+  </footer>
+</body>
+</html>
