--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section>
       <h2>Organizers</h2>
       <ul>
-        <li>Guchuan Li (<a href=" ">Email</a >)</li>
+        <li>Guchuan Li (<a href="mailto:liguchuan@math.pku.edu.cn">Email</a>)</li>
         <li>Foling Zou (<a href="zoufoling@outlook.com">Email</a >)</li><!-- Add more organizers here -->
       </ul>
     </section>
