--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
       <h2>Organizers</h2>
       <ul>
         <li>Guchuan Li (<a href="mailto:liguchuan@math.pku.edu.cn">Email</a>)</li>
-        <li>Foling Zou (<a href="zoufoling@outlook.com">Email</a >)</li><!-- Add more organizers here -->
+        <li>Foling Zou (<a href="mailto:zoufoling@outlook.com">Email</a>)</li>
+        <!-- Add more organizers here -->
       </ul>
     </section>
 
