--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
           </tr>
         </tbody>
       </table>
+      
+      <!-- Abstract for Clover May's talk -->
       <div class="abstract">
-        <h3>Abstract</h3>
+        <h3>Abstract for Clover May's Talk</h3>
         <p>
           Classically, since Z/p is a field, any module over the Eilenberg—MacLane spectrum HZ/p splits as a wedge of suspensions of HZ/p itself. Equivariantly, cohomology and the module theory of G-equivariant Eilenberg--MacLane spectra are much more complicated.
         </p>
@@ -95,4 +97,3 @@
   </footer>
 </body>
 </html>
-
