--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       
       <!-- Abstract for Clover May's talk -->
       <div class="abstract">
-        <h3>Abstract for Clover May's Talk</h3>
+        <h3>Clover May: Classifying modules of equivariant Eilenberg--MacLane spectra</h3>
         <p>
           Classically, since Z/p is a field, any module over the Eilenberg—MacLane spectrum HZ/p splits as a wedge of suspensions of HZ/p itself. Equivariantly, cohomology and the module theory of G-equivariant Eilenberg--MacLane spectra are much more complicated.
         </p>
