--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
       <h2>Organizers</h2>
       <ul>
         <li>Guchuan Li (liguchuan@math.pku.edu.cn)</li>
-        <li>Foling Zou (zoufoling@outlook.com)</li><!-- Add more organizers here -->
+        <li>Foling Zou (zoufoling@outlook.com)</li>
+        <li>Dezhou Li (dezhouli@pku.edu.cn)</li>
+        <!-- Add more organizers here -->
       </ul>
     </section>
 
