--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section>
       <h2>About the Seminar</h2>
       <p>
-        All times are in Beijing Time. The Zoom ID is 6817169181.
+        All times are in Beijing Time. The Zoom ID is 6817169181. Please contact the organizer for the meeting passcode.
       </p>
     </section>
 
